--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "helmet": "^8.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2"
   },
