--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" , "Sprint#2" , "Sprint#3" , "Sprint#4"]
+    branches: [ "main" , 'Sprint*']
   pull_request:
-    branches: [ "main" , "Sprint#2" , "Sprint#3" , "Sprint#4"]
+    branches: [ "main" , "Sprint*']
 
 
 jobs:
