--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" , 'Sprint*']
+    branches: [ "main" , 'Sprint*', "Sprint#2"]
   pull_request:
-    branches: [ "main" , "Sprint*']
+    branches: [ "main" , 'Sprint*', "Sprint#2"]
 
 
 jobs:
