--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
