--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "type": "module",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "selenium-side-runner": "^4.0.12"
   }
 }
