--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "selenium-side-runner --config-file ./tests/selenium/.side.yml ./tests/selenium/tests.side"
+    "test": "selenium-side-runner --config-file ./tests/selenium/.side.yml ./tests/selenium/tests.side",
+    "build": "node index.js"
   },
   "author": "",
   "license": "ISC",
