--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,8 +33,5 @@ jobs:
     - name: Install Dependencies
       run: npm ci # Install dependencies based on what's inside package-lock.json
 
-    - name: Run Build Script
-      run: npm run build --if-present
-
     - name: Run Tests
-      run: npm test
+      run: npm run ci
