--- a/tests/selenium/.side.yml
+++ b/tests/selenium/.side.yml
@@ -1,5 +1,6 @@
 capabilities:
   browserName: 'chrome'
   goog:chromeOptions:
-    args: 
-      - headless
+    args: # These args are essential to start Chrome
+      - headless # Browser will not be visible
+      - no-sandbox # Disable sandbox
