--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "selenium-side-runner --config-file ./tests/selenium/.side.yml ./tests/selenium/tests.side",
+    "test-side": "selenium-side-runner --config-file ./tests/selenium/.side.yml ./tests/selenium/tests.side",
     "start-server": "node index.js",
-    "ci": "start-server-and-test start-server http://localhost:5000 test"
+    "ci": "start-server-and-test start-server http://localhost:5000 test-side",
+    "test-jest": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "selenium-side-runner": "^4.0.12",
     "start-server-and-test": "^2.0.8"
