--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,4 +44,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - run: exit 0
+    - name: Checkout Source Code
+      uses: actions/checkout@v4
+
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+
+    - name: Install Dependencies
+      run: npm ci
+
+    - name: Run Unit Tests
+      run: npm run test-jest
