--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on: 
-  push: # Run jobs when a push is detected
+  push:
     branches: [ "main", "Sprint#*" ]
-  pull_request: # Run jobs when a pull request is detected
+  pull_request:
     branches: [ "main", "Sprint#*" ]
 
 jobs:
@@ -15,11 +12,11 @@ jobs:
 
     env:
       MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      PORT: ${{ vars.PORT }}
+      PORT: 5000
 
     steps:
     - name: Install Chrome/Chromium and ChromeDriver
-      uses: browser-actions/setup-chrome@v1 # Uses the version 1 of setup-chrome action
+      uses: browser-actions/setup-chrome@v1
       with:
         chrome-version: 131.0.6778.69
         install-chromedriver: true
@@ -35,14 +32,17 @@ jobs:
         cache: 'npm'
 
     - name: Install Dependencies
-      run: npm ci # Install dependencies based on what's inside package-lock.json
+      run: npm ci
 
-    - name: Run Tests
+    - name: Run End-to-End Tests
       run: npm run ci
 
   unit_testing:
     runs-on: ubuntu-latest
-    
+
+    env:
+      PORT: 6000
+
     steps:
     - name: Checkout Source Code
       uses: actions/checkout@v4
